# chip8-emulator

./: CMakeLists.txt  main.cpp
src/: Chip8.cpp  Chip8.h  emu.cpp  emu.h
